<resources>
    <string name="app_name">prac10</string>
    <string name="name1">Настройки</string>
    <string name="name2">Профиль пользователя</string>
    <string name="name3">Дата и время</string>
    <string name="name4">Настройки звука</string>
    <string name="name5">Проверить обновления</string>
    <string name="menu_name1">Список</string>
    <string name="menu_name2">Будильник</string>
    <string name="menu_name3">Календарь</string>
    <string name="menu_name4">Настройки</string>
    <string name="name11">Будильник</string>
    <string name="name22">07:30</string>
    <string name="name33">08:00</string>
    <string name="addAlarm">Добавить будильник</string>
    <string name="name111">Список дел</string>
    <string name="addList">Добавить задачу</string>
    <string name="name222">Постирать вещи</string>
    <string name="name333">Приготовить покушать</string>
    <string name="name444">Оплатить кредит</string>
    <string name="name555">06.03.2023</string>
    <string name="name666">11:30</string>
    <string name="name1111">Календарь</string>
    <string name="name2222">Январь</string>
    <string name="kal1">Пн</string>
    <string name="kal2">Вт</string>
    <string name="kal3">Ср</string>
    <string name="kal4">Чт</string>
    <string name="kal5">Пт</string>
    <string name="kal6">Сб</string>
    <string name="kal7">Вс</string>
    <string name="kal8">Январь</string>
    <string name="kal9">Январь</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fiveTeen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="twentyOne">21</string>
    <string name="twentyTwo">22</string>
    <string name="twentyThree">23</string>
    <string name="twentyFour">24</string>
    <string name="twentyFive">25</string>
    <string name="twentySix">26</string>
    <string name="twentySeven">27</string>
    <string name="twentyEight">28</string>
    <string name="twentyNine">29</string>
    <string name="thirty">30</string>
    <string name="thirtyOne">31</string>

</resources>