<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60D394"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text111"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="18sp"
            android:text="@string/name111"
            android:textColor="#FFFFFFFF"
            android:textSize="35sp" />

        <Button
            android:id="@+id/avatar"
            android:layout_width="56sp"
            android:layout_height="56sp"
            android:layout_marginTop="16sp"
            android:background="@drawable/avatar1"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="519dp">

        <ImageView
            android:id="@+id/task"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="50sp"
            android:layout_marginTop="40sp"
            android:background="@drawable/rectangle3"/>

        <ImageView
            android:id="@+id/task2"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="50sp"
            android:layout_marginTop="170sp"
            android:background="@drawable/rectangle3"/>

        <ImageView
            android:id="@+id/task3"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="50sp"
            android:layout_marginTop="300sp"
            android:background="@drawable/rectangle3" />

        <TextView
            android:id="@+id/text222"
            android:layout_width="210dp"
            android:layout_height="80dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="50sp"
            android:text="@string/name222"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text333"
            android:layout_width="210dp"
            android:layout_height="80dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="180sp"
            android:text="@string/name333"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text444"
            android:layout_width="210dp"
            android:layout_height="80dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="310sp"
            android:text="@string/name444"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/text555"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="52sp"
            android:text="@string/name555"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text666"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="183sp"
            android:text="@string/name555"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text777"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="313sp"
            android:text="@string/name555"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text888"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="70sp"
            android:text="@string/name666"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="200sp"
            android:text="@string/name666"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="330sp"
            android:text="@string/name666"
            android:textColor="@color/gray"
            android:textSize="12sp" />


        <Button
            android:id="@+id/alarmAdd"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="50sp"
            android:layout_marginBottom="50dp"
            android:background="#AAF482"
            android:text="@string/addList"
            android:textColor="@color/gray" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/menu_list"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="25sp"
            android:layout_marginTop="1dp"
            android:background="@drawable/list1"
            android:backgroundTint="@color/btn_active"
            android:contentDescription="@string/menu_name1"
            android:textColorLink="#93E865" />

        <Button
            android:id="@+id/menu_alarm"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="90sp"
            android:layout_marginTop="6dp"
            android:background="@drawable/alarm1"
            android:contentDescription="@string/menu_name2" />

        <Button
            android:id="@+id/menu_calendar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="155sp"
            android:layout_marginTop="6dp"
            android:background="@drawable/calendar1"
            android:contentDescription="@string/menu_name3" />

        <Button
            android:id="@+id/menu_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="215sp"
            android:layout_marginTop="6dp"
            android:background="@drawable/settings1"
            android:contentDescription="@string/menu_name4" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle1"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/menu_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="50dp"
                android:text="@string/menu_name1"
                android:textColor="@color/btn_active"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/menu_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="89dp"
                android:layout_marginTop="50dp"
                android:text="@string/menu_name2"
                android:textColor="#ff8585"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/menu_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="154dp"
                android:layout_marginTop="50dp"
                android:text="@string/menu_name3"
                android:textColor="#ff8585"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/menu_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="214dp"
                android:layout_marginTop="50dp"
                android:text="@string/menu_name4"
                android:textColor="#ff8585"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>
