<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60D394"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text1"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="18sp"
            android:text="@string/name1"
            android:textColor="#FFFFFFFF"
            android:textSize="35sp" />

        <Button
            android:id="@+id/avatar"
            android:layout_width="56sp"
            android:layout_height="56sp"
            android:layout_marginTop="16sp"
            android:background="@drawable/avatar1"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="519dp">

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="20sp"
            android:text="@string/name2"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <Button
            android:id="@+id/vector"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_marginStart="90sp"
            android:layout_marginTop="27sp"
            android:layout_toEndOf="@+id/text3"
            android:background="@drawable/vector"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="70sp"
            android:text="@string/name3"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <Button
            android:id="@+id/vector2"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_marginStart="90sp"
            android:layout_marginTop="77sp"
            android:layout_toEndOf="@+id/text3"
            android:background="@drawable/vector"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="120sp"
            android:text="@string/name4"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <Button
            android:id="@+id/vector3"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_marginStart="90sp"
            android:layout_marginTop="127sp"
            android:layout_toEndOf="@+id/text3"
            android:background="@drawable/vector"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="170sp"
            android:text="@string/name5"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <Button
            android:id="@+id/vector4"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_marginStart="90sp"
            android:layout_marginTop="177sp"
            android:layout_toEndOf="@+id/text3"
            android:background="@drawable/vector"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/menu_list"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="25sp"
            android:layout_marginTop="1dp"
            android:background="@drawable/list1"
            android:contentDescription="@string/menu_name1" />

        <Button
            android:id="@+id/menu_alarm"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="90sp"
            android:layout_marginTop="6dp"
            android:background="@drawable/alarm1"
            android:contentDescription="@string/menu_name2" />

        <Button
            android:id="@+id/menu_calendar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="155sp"
            android:layout_marginTop="6dp"
            android:background="@drawable/calendar1"
            android:contentDescription="@string/menu_name3" />

        <Button
            android:id="@+id/menu_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="215sp"
            android:layout_marginTop="6dp"
            android:background="@drawable/settings1"
            android:backgroundTint="@color/btn_active"
            android:contentDescription="@string/menu_name4" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/menu_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="50dp"
                android:text="@string/menu_name1"
                android:textColor="#ff8585"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/menu_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="89dp"
                android:layout_marginTop="50dp"
                android:text="@string/menu_name2"
                android:textColor="#ff8585"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/menu_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="154dp"
                android:layout_marginTop="50dp"
                android:text="@string/menu_name3"
                android:textColor="#ff8585"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/menu_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="214dp"
                android:layout_marginTop="50dp"
                android:text="@string/menu_name4"
                android:textColor="@color/btn_active"
                android:textSize="10sp"
                tools:ignore="SmallSp" />


        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>
